Fernhills_Team/Khaleel_Arfath/STM32_workspace/.metadata/.plugins/org.eclipse.cdt.ui/UART_DMA.build.log
01:28:44 **** Incremental Build of configuration Debug for project UART_DMA ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'set_sysclk_to_168':
../Core/Src/main.c:45:17: error: 'PLL_M' undeclared (first use in this function)
   45 |  RCC->PLLCFGR = PLL_M | (PLL_N << 6) | (((PLL_P >> 1) -1) << 16) |
      |                 ^~~~~
../Core/Src/main.c:45:17: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:45:26: error: 'PLL_N' undeclared (first use in this function)
   45 |  RCC->PLLCFGR = PLL_M | (PLL_N << 6) | (((PLL_P >> 1) -1) << 16) |
      |                          ^~~~~
../Core/Src/main.c:45:43: error: 'PLL_P' undeclared (first use in this function)
   45 |  RCC->PLLCFGR = PLL_M | (PLL_N << 6) | (((PLL_P >> 1) -1) << 16) |
      |                                           ^~~~~
../Core/Src/main.c:46:18: error: 'PLL_Q' undeclared (first use in this function)
   46 |                 (PLL_Q << 24) | (1 << 22);
      |                  ^~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

01:28:44 Build Failed. 5 errors, 0 warnings. (took 497ms)

